// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should apply switchDirection and direction props 1`] = `
<WithLoading(Flex)
  className="some-class"
  direction="column"
  switchDirection="medium"
>
  <WithLoading(FlexItem)
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </WithLoading(FlexItem)>
  <WithLoading(FlexItem)
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </WithLoading(FlexItem)>
</WithLoading(Flex)>
`;

exports[`RadioButtonGroup should match the snapshot 1`] = `
<WithLoading(Flex)
  className="some-class"
  direction="row"
>
  <WithLoading(FlexItem)
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </WithLoading(FlexItem)>
  <WithLoading(FlexItem)
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </WithLoading(FlexItem)>
</WithLoading(Flex)>
`;
